fix: invalid documentation (#1312)
* fix: invalid swagger documentation

* fix: invalid docker-compose provided

* feat: revert DCAT split in swagger UI

* feat: revert DCAT split in swagger UI for gh pages
