# docs/_configuration/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "LDES Server Admin API",
     "description": "This API makes it possible to manage an LDES Server",
-    "version": "2.16.0-SNAPSHOT"
+    "version": "3.1.0"
   },
   "servers": [
     {
@@ -187,7 +187,8 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "example": "event-stream"
           }
         ],
         "responses": {
@@ -265,7 +266,8 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "example": "event-stream"
           }
         ],
         "requestBody": {
@@ -292,9 +294,6 @@
           "required": true
         },
         "responses": {
-          "400": {
-            "description": "The provided shacl shape is not valid"
-          },
           "200": {
             "description": "OK",
             "content": {
@@ -351,8 +350,136 @@
               }
             }
           },
+          "400": {
+            "description": "The provided shacl shape is not valid"
+          },
           "404": {
             "description": "No event stream with provided id could be found"
+          }
+        }
+      }
+    },
+    "/admin/api/v1/eventstreams/{collectionName}/eventsource": {
+      "put": {
+        "tags": [
+          "Event Streams"
+        ],
+        "summary": "Update the Event Source of an Event Stream",
+        "operationId": "updateEventSource",
+        "parameters": [
+          {
+            "name": "collectionName",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "event-stream"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "text/turtle": {
+              "schema": {
+                "type": "string"
+              },
+              "example": "@prefix ldes: <https://w3id.org/ldes#> .\n@prefix dcterms: <http://purl.org/dc/terms/> .\n@prefix tree: <https://w3id.org/tree#>.\n\n<> a ldes:EventSource ;\n    ldes:retentionPolicy [\n        a ldes:DurationAgoPolicy ;\n        tree:value \"PT5S\"^^<http://www.w3.org/2001/XMLSchema#duration> ;\n      ] .\n"
+            },
+            "application/n-quads": {
+              "schema": {
+                "type": "string"
+              },
+              "example": "<http://njh.me/> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/ldes#EventSource> .\n<http://njh.me/> <https://w3id.org/ldes#retentionPolicy> _:genid1 .\n_:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/ldes#DurationAgoPolicy> .\n_:genid1 <https://w3id.org/tree#value> \"PT5S\"^^<http://www.w3.org/2001/XMLSchema#duration> .\n"
+            },
+            "application/ld+json": {
+              "example": [
+                {
+                  "@id": "_:b0",
+                  "@type": [
+                    "https://w3id.org/ldes#DurationAgoPolicy"
+                  ],
+                  "https://w3id.org/tree#value": [
+                    {
+                      "@value": "PT5S",
+                      "@type": "http://www.w3.org/2001/XMLSchema#duration"
+                    }
+                  ]
+                },
+                {
+                  "@id": "http://njh.me/",
+                  "@type": [
+                    "https://w3id.org/ldes#EventSource"
+                  ],
+                  "https://w3id.org/ldes#retentionPolicy": [
+                    {
+                      "@id": "_:b0"
+                    }
+                  ]
+                },
+                {
+                  "@id": "https://w3id.org/ldes#DurationAgoPolicy"
+                },
+                {
+                  "@id": "https://w3id.org/ldes#EventSource"
+                }
+              ]
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Event Source has been successfully updated",
+            "content": {
+              "text/turtle": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "@prefix ldes: <https://w3id.org/ldes#> .\n@prefix dcterms: <http://purl.org/dc/terms/> .\n@prefix tree: <https://w3id.org/tree#>.\n\n<> a ldes:EventSource ;\n    ldes:retentionPolicy [\n        a ldes:DurationAgoPolicy ;\n        tree:value \"PT5S\"^^<http://www.w3.org/2001/XMLSchema#duration> ;\n      ] .\n"
+              },
+              "application/n-quads": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "<http://njh.me/> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/ldes#EventSource> .\n<http://njh.me/> <https://w3id.org/ldes#retentionPolicy> _:genid1 .\n_:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/ldes#DurationAgoPolicy> .\n_:genid1 <https://w3id.org/tree#value> \"PT5S\"^^<http://www.w3.org/2001/XMLSchema#duration> .\n"
+              },
+              "application/ld+json": {
+                "example": [
+                  {
+                    "@id": "_:b0",
+                    "@type": [
+                      "https://w3id.org/ldes#DurationAgoPolicy"
+                    ],
+                    "https://w3id.org/tree#value": [
+                      {
+                        "@value": "PT5S",
+                        "@type": "http://www.w3.org/2001/XMLSchema#duration"
+                      }
+                    ]
+                  },
+                  {
+                    "@id": "http://njh.me/",
+                    "@type": [
+                      "https://w3id.org/ldes#EventSource"
+                    ],
+                    "https://w3id.org/ldes#retentionPolicy": [
+                      {
+                        "@id": "_:b0"
+                      }
+                    ]
+                  },
+                  {
+                    "@id": "https://w3id.org/ldes#DurationAgoPolicy"
+                  },
+                  {
+                    "@id": "https://w3id.org/ldes#EventSource"
+                  }
+                ]
+              }
+            }
+          },
+          "404": {
+            "description": "Event Stream with provided collection name could not be found"
           }
         }
       }
@@ -745,9 +872,6 @@
           "required": true
         },
         "responses": {
-          "400": {
-            "description": "The provided config is not valid"
-          },
           "201": {
             "description": "Created",
             "content": {
@@ -812,6 +936,9 @@
                 ]
               }
             }
+          },
+          "400": {
+            "description": "The provided config is not valid"
           }
         }
       }
@@ -913,6 +1040,34 @@
           },
           "404": {
             "description": "Missing EventStream"
+          }
+        }
+      }
+    },
+    "/admin/api/v1/eventstreams/{collectionName}/close": {
+      "post": {
+        "tags": [
+          "Event Streams"
+        ],
+        "summary": "Close an Event Stream",
+        "operationId": "closeEventStream",
+        "parameters": [
+          {
+            "name": "collectionName",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "event-stream"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Event Stream with provided collection name could not be found"
+          },
+          "200": {
+            "description": "Event Stream is successfully closed and all related fragments are made immutable"
           }
         }
       }
@@ -1262,6 +1417,9 @@
           "required": true
         },
         "responses": {
+          "400": {
+            "description": "Provided DCAT configuration is not valid"
+          },
           "201": {
             "description": "The generated UUID that is linked to the created DCAT",
             "content": {
@@ -1272,9 +1430,6 @@
                 "example": "e1c9443a-ab9f-407f-a65b-09d69f481966"
               }
             }
-          },
-          "400": {
-            "description": "Provided DCAT configuration is not valid"
           }
         }
       }
@@ -1459,6 +1614,9 @@
           }
         ],
         "responses": {
+          "404": {
+            "description": "Missing EventStream or Missing View"
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -1466,14 +1624,9 @@
               "application/ld+json": {},
               "application/n-quads": {}
             }
-          },
-          "404": {
-            "description": "Missing EventStream or Missing View"
           }
         }
-      }
-    },
-    "/admin/api/v1/eventstreams/{collectionName}/views/{view}": {
+      },
       "delete": {
         "tags": [
           "Views"
@@ -1492,7 +1645,7 @@
             "example": "event-stream"
           },
           {
-            "name": "view",
+            "name": "viewName",
             "in": "path",
             "description": "The name of deleted view",
             "required": true,
